<!--
  ~  Copyright (c) 2018 AITIA International Inc.
  ~
  ~  This work is part of the Productive 4.0 innovation project, which receives grants from the
  ~  European Commissions H2020 research and innovation programme, ECSEL Joint Undertaking
  ~  (project no. 737459), the free state of Saxony, the German Federal Ministry of Education and
  ~  national funding authorities from involved countries.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>eu.arrowhead</groupId>
    <artifactId>arrowhead</artifactId>
    <version>4.0</version>
  </parent>

  <artifactId>serviceregistry</artifactId>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.version>3.1</maven.compiler.version>
    <maven.dependency.version>2.5.1</maven.dependency.version>
    <maven.jar.version>3.0.2</maven.jar.version>
    <maven.resources.version>2.7</maven.resources.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>eu.arrowhead</groupId>
      <artifactId>common</artifactId>
    </dependency>

    <dependency>
      <groupId>eu.arrowhead</groupId>
      <artifactId>dnssd</artifactId>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <executions>
          <execution>
            <id>default-compile</id>
            <configuration>
              <showDeprecation>true</showDeprecation>
              <showWarnings>true</showWarnings>
              <compilerArguments>
                <source>${maven.compiler.target}</source>
                <target>${maven.compiler.source}</target>
              </compilerArguments>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
      <!-- Make this jar executable -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven.jar.version}</version>
        <configuration>
          <!-- MainClass in mainfest make a executable jar -->
          <archive>
            <manifestEntries>
              <Class-Path>config/</Class-Path>
            </manifestEntries>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>eu.arrowhead.core.serviceregistry.ServiceRegistryMain</mainClass>
              <classpathPrefix>lib/</classpathPrefix>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <!-- Copy project dependency -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${maven.dependency.version}</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <!-- exclude junit, we need runtime dependency only -->
              <outputDirectory>${basedir}/target/lib/</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven.resources.version}</version>
        <executions>
          <execution>
            <id>copy-resources</id>
            <!-- here the phase you need -->
            <phase>validate</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${basedir}/target/config</outputDirectory>
              <resources>
                <resource>
                  <directory>config</directory>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>